--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "resolver",
     "build"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "2.4.1",
+    "wrench": "1.5.8"
+  },
   "main": "./src/index",
   "license": "MIT",
   "engines": {
