--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "mocha": "1.9.0",
-    "chai": "1.5.0"
+    "chai": "1.5.0",
+    "rimraf": "2.2.8"
   },
   "scripts": {
      "test": "node_modules/.bin/mocha"
